# ChangeLog for dev-perl/Jcode
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Jcode/ChangeLog,v 1.48 2011/09/04 11:22:48 tove Exp $

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -Jcode-2.07.ebuild:
  Cleanup

*Jcode-2.70.0 (30 Aug 2011)

  30 Aug 2011; Torsten Veller <tove@gentoo.org> +Jcode-2.70.0.ebuild:
  Change version scheme

  15 Sep 2008; Torsten Veller <tove@gentoo.org> -Jcode-2.03.ebuild:
  Cleanup

*Jcode-2.07 (15 Sep 2008)

  15 Sep 2008; Torsten Veller <tove@gentoo.org> +Jcode-2.07.ebuild:
  Version bump

  16 Apr 2007; Markus Rothe <corsair@gentoo.org> Jcode-2.06.ebuild:
  Stable on ppc64

  21 Mar 2007; Michael Cummings <mcummings@gentoo.org> Jcode-2.06.ebuild:
  Keywording ~mips, tested on swarm, bug 123679 related

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> Jcode-2.06.ebuild:
  Stable on x86, bug #169152.

  23 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org> Jcode-2.06.ebuild:
  Stable on hppa

  21 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org> Jcode-2.06.ebuild:
  ppc stable

  20 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> Jcode-2.06.ebuild:
  Stable on Alpha.

  15 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> Jcode-2.06.ebuild:
  Stable on ia64.

  10 Oct 2006; Michael Cummings <mcummings@gentoo.org> -Jcode-0.83.ebuild,
  -Jcode-0.87.ebuild, Jcode-2.03.ebuild, -Jcode-2.05.ebuild,
  Jcode-2.06.ebuild:
  Keywording sparc, amd64 stable; cleaned out stale ebuilds

  05 Aug 2006; Michael Cummings <mcummings@gentoo.org> Jcode-0.83.ebuild,
  Jcode-0.87.ebuild, Jcode-2.03.ebuild, Jcode-2.05.ebuild,
  Jcode-2.06.ebuild:
  Adding perl dep; fixed DEPEND

  04 Jul 2006; Christian Hartmann <ian@gentoo.org> Jcode-0.83.ebuild,
  Jcode-0.87.ebuild, Jcode-2.03.ebuild, Jcode-2.05.ebuild:
  Fixed RDEPEND wrt bug #134781

  02 Jul 2006; Michael Cummings <mcummings@gentoo.org> Jcode-2.03.ebuild:
  Marking stable amd64

*Jcode-2.06 (02 Jul 2006)
