@@ -1,16 +1,20 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 DIST Net-CUPS-0.59.tar.gz 70705 RMD160 6b3eb315dbefc02d14095159fc15770ac45f6ac4 SHA1 e18fd3157caa937be220dcace23dbeee01ddce85 SHA256 42acf40390b5c75fa7cc63c636f2797c4d96385b14108fcd683fdc98e43a9d3c
 DIST Net-CUPS-0.61.tar.gz 83893 RMD160 c3dcf15fefc83985e79bb47439d485a5f956f854 SHA1 48240df335169950853ec30caa4be8733af2b48b SHA256 fd4a5a86038df9dfe57dcfed78b2d045e4b18d507a6fa5a8f82ecb3a732e0e35
 EBUILD Net-CUPS-0.59.ebuild 501 RMD160 d7b410a88b867c39a9bee5e3dc5dfc1cfe272eab SHA1 c743486b21e6c58a689e617a5ca3b316c40c8920 SHA256 39478cbc4864588d4d90f8a8fa91f989e42289cd70b674ccd283947a67efc5b5
-EBUILD Net-CUPS-0.610.0.ebuild 486 RMD160 3a6c319fa0fc1b47ff62f0115cb8c535c6aa6653 SHA1 8276be9d5377aeab90fdd39206b26223cf350634 SHA256 c65abb29ca7c86a47cececa83ce0b9aeabbc94d30313a4c117609bd388abf03c
-MISC ChangeLog 3965 RMD160 ae20686130ace1a409256ef02c39c9e3b97e12f9 SHA1 c256c6fa569db7aad7a2139297c511ad1a005fe9 SHA256 057d3e688e1d7c69e3e0fb9df629cbd5fb96d1d33821d1e4ce93c143be4ea982
+EBUILD Net-CUPS-0.610.0.ebuild 484 RMD160 f429490d04b856f714dee88cef246fde328fb0ef SHA1 8d2d1151c851a391bfabb48deb2a94b773b3fe00 SHA256 8c153fd05917164b9b9a46acb313f154381319e68867d13749bc9e1c6c441d6b
+MISC ChangeLog 4075 RMD160 0e66291e248a8136755781ec70cddbbd6b47f2da SHA1 7a0dcd6e4e37973f7cfd2138e2651c445e23d672 SHA256 b5d5010961af632564fd7249184985d282e665e3a8ac57faf03cf03fc415223a
 MISC metadata.xml 234 RMD160 3710d1da5258b33bad526e739ad3475805c9b5f9 SHA1 8b1703daf492b525ebdb4cc4dd38903e7010d3aa SHA256 dd476a598fd749f20b27c1635903c1816c373d9c4c9845baa763685110272d94
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREIAAYFAk5jYEgACgkQV3J2n04EauyH6ACgwFsvOT1WRcXtC95Ke8V1I0Xi
-bz4AoKNHkFw24ofxv04QNlPOKrPsZz2i
-=bqS0
+iQEcBAEBCgAGBQJPR2W4AAoJEOTDgjZ80txdb+sH/3QipJBZ/EZjzB3GnRy2cvlM
+PU6Q/X4Y5Q92Cphz4TSLhrYy1SSypPgCPjNaNkvClFcjgi3aJYu8Nks6D3YtP/aG
+kNQZyrA0yXtvVyamyc2JBuIZnuLW+HJgsQ+Mhn9mM3oTl0s+/q6OJlpsQxjSPdgT
+lCAzZisMDrsi063z/W0N0fd743sK9p4Ruy7DexdIVMLi7zcImbpud2mvBsNrWL6F
+XZy8A4b+rpquC2Ni583wdQT3EVa6c5CkHEoKaDzGWIGdCESesdbJ5l4ikAGHSbWd
+2+BN6+knE8pqnqZdfbA7PVAaxzQYFrbbKGfv04VzsmhanCmwDEeBRaQHAeVba/k=
+=BBje
 -----END PGP SIGNATURE-----
