@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Jcode
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Jcode/ChangeLog,v 1.48 2011/09/04 11:22:48 tove Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Jcode/ChangeLog,v 1.49 2012/02/24 10:21:08 ago Exp $
+
+  24 Feb 2012; Agostino Sarubbo <ago@gentoo.org> Jcode-2.70.0.ebuild:
+  Stable for amd64, wrt bug #400155
 
   04 Sep 2011; Torsten Veller <tove@gentoo.org> -Jcode-2.07.ebuild:
   Cleanup
